--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 <p>Email: abdulmannan600306@gmail.com</p>
 <p>Address:</p>
 <p>
-  House no L-410 <br/>
-  Sector 34/2, Korangi no 3 <br/>
+  House no L-440 <br/>
+  Block 4, Street 3 <br/>
   Karachi <br/>
 </p>
